# dootle

./: .envrc  .gitignore  .gitmodules  .lenvs  .pre-commit-config.yaml  .readthedocs.yaml  .related  CHANGELOG.md  VERSION.toml  _changes  architecture.md  checklist.md  doot.toml  pyproject.toml  ruff.toml  towncrier.toml  tox.toml
.github/workflows/: python-publish.yml
.tasks/: docs.toml  dootle_todos.org  triage_todos.org  version.toml
_other/control/: date_tracker.py  enums.py
docs/: conf.py  index.rst
dootle/: __init__.py  groups_secondary.py  index.rst
dootle/__docs/: conf.py
dootle/_docs/: conf.py
dootle/_obsolete/: cargo.py  clingo.py  hashing.py  ocr.py  org.py  socmedia_post.py  twitter_archive.py
dootle/_obsolete/reporters/: git.py  json.py  pdf.py  tags.py  xml.py
dootle/_obsolete/secondary/: cargo.py  gradle.py  logs.py  maintenance.py  taggers.py
dootle/actions/: bibtex_io.py  dot.py  downloader.py  godot.py  jekyll.py  json.py  latex.py  maintenance.py  noscript.py  nprandom.py  ocr.py  pdf.py  plantuml.py  postbox.py  random.py  say.py  shell.py  xml.py
dootle/actions/__tests/: test_postbox.py  test_shell.py
dootle/android/: _mixin.py  _tasks.py  actions.py  mixin.py  tasks.py
dootle/backup/: collector.py  tasks.py
dootle/bibtex/: __init__.py  _interface.py  actions.py  failed_blocks.py  field_cleaner_mixin.py  init_db.py  loader.py  middlewares.py  name_split.py  path_cleaner_mixin.py  reader.py  reporters.py  tasks.py  v2.py  v2_parser.py  writer.py
dootle/bibtex/__obsolete/: path_cleaner_mixin.py  reporters.py  tasks.py  utils.py  writer.py
dootle/bibtex/__tests/: test_failed_blocks.py
dootle/bookmarks/: actions.py  alchemy_fns.py  pony_fns.py  reporters.py  selenium.py  tasks.py
dootle/bookmarks/__tests/: test_structs.py
dootle/cmds/: example_cmd.py  precommit.py
dootle/control/: reactor_runner.py  reactor_tracker.py
dootle/control/__tests/: test_runner.py  test_tracker.py
dootle/control/fsm/: _TaskMachine.dot  _TaskTrackMachine.dot  _interface.py  errors.py  factory.py  fsm_tracker.py  machines.py  runner.py  state_tracker.py  task.py  task_machine.py
dootle/control/fsm/__tests/: test_fsm_tracker.py  test_machines.py  test_runner.py  test_state_tracker.py  test_task.py  test_task_network.py  test_task_queue.py  test_task_registry.py
dootle/control/fsm/_graphs/: _ArtifactMachine.dot  _MainMachine.dot  _OverlordMachine.dot  _TaskMachine.dot
dootle/epub/: actions.py  tasks.py
dootle/godot/: actions.py  tasks.py
dootle/jobs/: __init__.py  expand.py  expansion.py  injection.py  job_actions.py  job_expansion.py  job_injection.py  job_queuing.py  limit.py  limiting.py  multi_shadow.py  queue.py  queueing.py  shadow.py  walker.py  walking.py
dootle/jobs/__tests/: test_expand.py  test_expansion.py  test_injection.py  test_limit.py  test_limiting.py  test_shadow.py  test_walker.py
dootle/latex/: actions.py  mixin.py  tasks.py
dootle/mastodon/: __init__.py  actions.py
dootle/misc/: maintenance.py
dootle/mixins/_obsolete/: encrypt.py
dootle/mixins/apis/: mastodon.py  tweepy.py  twitter.py
dootle/mixins/bibtex/: clean.py
dootle/mixins/task/: downloader.py  json.py  latex.py  ocr.py  pdf.py  xml.py
dootle/pelican/: actions.py  tasks.py
dootle/python/: actions.py  get_version.py  mamba.py  tasks.py
dootle/reporters/: __init__.py  _interface.py  bibtex.py  csv.py  fancy.py  liner.py  pdf.py  tags.py
dootle/reporters/__tests/: test_fancy.py  test_liner.py
dootle/runner/: runner.py
dootle/sphinx/: actions.py  tasks.py
dootle/spiders/: actions.py  mixin.py  runner.py  tracker.py
dootle/tags/: actions.py  structs.py  tasks.py
dootle/tags/__tests/: test_structs.py
dootle/tasks/: bibtex.py  bookmark.py  cargo.py  clingo.py  godot.py  groups.py  hashing.py  man.py  mastodon.py  noscript.py  ocr.py  org.py  pelican.py  project_init.py  python.py  socmedia_post.py  tags.py  twitter_archive.py
dootle/tasks/bkmkorg/: android.py  basic.py  tags.py
dootle/tasks/builders/: epub.py  jekyll.py  pip_tasks.py  sphinx.py
dootle/tasks/code/: latex.py
dootle/tasks/files/: backup.py  backup_collector.py
dootle/tasks/fsm/: artifact.py  task_machine.py
dootle/tasks/fsm/__tests/: test_machines.py
dootle/tasks/reporters/: bibtex.py  csv.py  git.py  visual.py
dootle/tasks/secondary/: _todo.py  cargo.py  deleter.py  jekyll.py  maintenance.py  python.py  xml.py
dootle/utils/: commit_caching.py  genx.py  multi_shadow.py  recency_test.py  shaped_key.py  template_expansion.py
dootle/utils/__tests/: test_shaped_key.py
dootle/utils/bibtex/: writer.py
