[project]
name            = "dootle"
version         = "0.1.2"
description     = "A Library of extensions for Doot task running"
readme          = "README.md"
requires-python = ">=3.11"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {name  = "John Grey", email = "jgrey.n.plus.one@gmail.com"},
]

classifiers     = [
  "Programming Language :: Python"
]

dependencies   = [
    "doot",
    "jgdv",
    "itemadapter",
    "w3lib",
    "pony",
    "scrapy",
    "mastodon.py>=1.8",
    "bibtexparser>=2.0.0b4",
    "numpy",
    "networkx",
    "polars",
    "jsonlines",
]

[project.optional-dependencies]
dev      = ["pipreqs", "sphinx" ]
test     = ["pytest > 7.0" ]
image    = ["Pillow"]
net      = ["Requests", "beautifulsoup4"]
bibtex   = ["bibtexparser", "pylatexenc"]
data     = ["PyYAML", "pandas", "scikit-learn", "xsdata"]
visual   = ["matplotlib", "seaborn", "wordcloud"]
pdf      = ["pdfrw", "pypandoc"]

##-- urls
[project.urls]
homepage      = "https://github.com/jgrey4296/dootle"                     # TODO
documentation = "https://readthedocs.org/dootle"                          # TODO
repository    = "https://github.com/jgrey4296/dootle"                     # TODO
changelog     = "https://github.com//dootle/blob/master/CHANGELOG.md" # TODO

##-- end urls

##-- scripts
[project.scripts]

##-- end scripts

##-- entry-points
[project.entry-points."doot.plugins.command"]
# example = "dootle.cmds.example_cmd:ExampleCmd"

[project.entry-points."doot.plugins.action"]
rng         = "dootle.actions.nprandom:new_random"
say         = "dootle.actions.say:say"
"mamba.env" = "dootle.python.mamba:MambaEnv"

##-- end entry-points

##-- build-system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["dootle*"]

[tool.setuptools.package-data]
"*" = ["*"]
"dootle.__data"    = ["*.so"]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

##-- pytest
[tool.pytest.ini_options]
log_cli       = false
log_level     = "DEBUG"
log_cli_level = "DEBUG"

##-- end pytest

##-- bumpber
[tool.bumpver]
current_version    = "0.1.2"
version_pattern    = "MAJOR.MINOR.PATCH"
commit_message     = "[bump]: version {old_version} -> {new_version}"
tag_message        = "{new_version}"
tag_scope          = "default"
# commit             = true
# tag                = true
# pre_commit_hook  = ""
# post_commit_hook = ""
# push             = true

[tool.bumpver.file_patterns]
"pyproject.toml"   = [
                   '^version\s+=\s+"{version}"',
                   '^current_version\s+=\s+"{version}"'
]
"dootle/__init__.py" = ['^__version__\s+=\s+"{version}"']

##-- end bumpber
